Squashing bugs UI. flex-gap is not supported for older browser.

--- a/src/App.css
+++ b/src/App.css
@@ -54,8 +54,9 @@ h6 {
   overflow: auto;
 }
 
-.flex_row_gap *:not(:first-child):not(:last-child) {
-  margin-left: 16px;
+.flex_row_gap *:not(:last-child),
+.column_gap *:not(:last-child) {
+  margin-right: 16px;
 }
 
 .margin {
@@ -82,7 +83,6 @@ section .flex_row_gap::-webkit-scrollbar {
 }
 
 .column_gap {
-  gap: 16px;
   margin-top: 120px;
   align-items: center;
 }
